Fixed item name

--- a/Echoes/Lore.plist
+++ b/Echoes/Lore.plist
@@ -182,7 +182,7 @@ First time speaking to him
 		
 		
 Items:
-All - Estus Flask
+All - Healing Flask
 One - Undead Asylum F2 East Key</string>
 		</dict>
 		<dict>
